--- a/products/product-style.css
+++ b/products/product-style.css
@@ -153,3 +153,21 @@ input{
 .checkout__btn{
     margin-top:5% ;
 }
+.contact__form{
+    margin: 15%;
+    display: flex;
+    flex-direction: column;
+}
+.contact__form-hd{
+
+    border-bottom: 2px solid;
+    margin-bottom: 3%;
+}
+#textarea{
+    box-shadow: var(--bx-shadow);
+    border-radius: var(--btn-border-radius);
+    -webkit-border-radius: var(--btn-border-radius);
+    -moz-border-radius: var(--btn-border-radius);
+    -ms-border-radius: var(--btn-border-radius);
+    -o-border-radius: var(--btn-border-radius);
+}
