--- a/main.css
+++ b/main.css
@@ -1,17 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 
 :root {
   --primary-color: #000;
-  --font-family: font-family: 'Urbanist', sans-serif;
+  --font-family: "Urbanist", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -56,10 +55,13 @@ nav {
   text-decoration: none;
 }
 
+.menu a:hover {
+  color: #4caf50;
+  text-decoration: none;
+}
 .cart__icon {
-  padding: 0.6em;
-  width: 2.3rem;
-  height: 2.3rem;
+  width: 1.3rem;
+  height: 1.3rem;
   cursor: pointer;
 }
 .btn {
@@ -77,13 +79,12 @@ nav {
 }
 
 .btn a {
-  color: #fff
+  color: #fff;
 }
 
 /*   Navigation ends here */
 
 /* Header starts here */
-
 #header {
   height: 100vh;
 }
@@ -156,29 +157,26 @@ nav {
 
 .product:hover {
   transform: scale(0.9);
-  -webkit-transform: scale(0.9);
-  -moz-transform: scale(0.9);
-  -ms-transform: scale(0.9);
-  -o-transform: scale(0.9);
+  cursor: pointer;
 }
-
 
 .product img {
   max-width: 100%;
 }
 
 .product h3 {
-  margin-top: 1rem;
+  margin: 0.6rem 0;
+  font-family: var(--font-family);
+  color: #000;
 }
 
 .product .price {
-  font-weight: bold;
-  color: #3f36f4;
-  font-size: 1.5rem;
+  color: #000;
+  font-size: 1.1rem;
 }
 
 .product button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 1rem 3rem;
   border: none;
@@ -190,13 +188,7 @@ nav {
   background-color: #000;
   box-shadow: 0 0 10px #3e8e41;
   transform: scale(1);
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
 }
-
-
 
 /* product section ends here  */
 
@@ -216,7 +208,8 @@ footer {
   padding: 2em;
 }
 
-.footer-left, .footer-right {
+.footer-left,
+.footer-right {
   width: 50%;
 }
 
@@ -235,3 +228,105 @@ footer {
 }
 
 /* footer ends here */
+
+/* responsiveness starts here */
+@media (max-width: 768px) {
+  /* Responsive nav menu starts here */
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    color: #000;
+    padding: 1.25em;
+  }
+
+  .logo {
+    font-size: 1.5rem;
+    font-family: var(font-family);
+    font-weight: 900;
+    margin: 0 auto;
+  }
+
+  .menu li {
+    font-size: 0.9rem;
+  }
+
+  .btn {
+    padding: 0.8em 1.4em;
+  }
+
+  /* Responsive nav menu ends here*/
+
+  /* Responsive Header Banner starts here */
+  .banner__title {
+    font-size: 1.5rem;
+  }
+  .banner__description {
+    font-size: 1rem;
+  }
+  .banner__title {
+    width: 100%;
+    font-size: 1.5rem;
+    padding: 1rem 0;
+    text-align: center;
+    color: #fff;
+    font-weight: 900;
+    letter-spacing: 0.4rem;
+    text-transform: uppercase;
+    font-family: var(font-family);
+  }
+
+  .banner__description {
+    font-size: 1.2rem;
+    padding: 1rem 1.3rem;
+    text-align: center;
+    width: 100%;
+    color: #fff;
+    line-height: 2.1rem;
+  }
+
+  .banner--btn {
+    background-color: #fff;
+    padding: 1.7em 3em;
+    text-transform: uppercase;
+    color: #000;
+  }
+  /* Responsive Header Banner ends here */
+
+  /* Responsive product items starts here*/
+  .product-grid {
+    grid-template-columns: 1fr;
+    margin: 2rem 0;
+  }
+
+  #product-section {
+    padding: 2em;
+  }
+  /* Responsive product items ends here*/
+
+  /* Responsive footer starts here */
+  .container {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-left,
+  .footer-right {
+    width: 100%;
+    text-align: center;
+    padding: 1em;
+  }
+
+  .footer__menu a {
+    color: #fff;
+    margin-left: 1rem;
+    text-decoration: none;
+    text-align: center;
+  }
+}
+/* Responsive footer ends here */
+
+/* responsiveness ends here */
