--- a/style.css
+++ b/style.css
@@ -136,51 +136,16 @@ gap: 30px;
     font-size: smaller;
 }
 
-/* Form */
-.buy{
-    background-color: var(--bgcolor3);
-    padding: 10px;
-}
-
-.buy__info-client label, .buy__submit, .buy__p-address{
-    display: block;
-    padding: 5px;
-}
-
-textarea{
-    padding: 10px;
-}
-
-.buy__img{
-    width: 100px;
-}
-
-#buy__payment-option{
-    display: inline;
-}
-.buy__redirect{
-    display: none;
-}
-.buy__submit:hover + .buy__redirect{
-    display: block
-}
-
-.buy__address{
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-}
-.buy__submit{
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 5px;
-    border: solid 2px var(--color2);
+.product__buy{
     background-color: var(--color4);
-    font-weight: 600;
-    width: 100px
+    color: var(--color3);
+    border-radius: 5px;
+    padding: 5px;
+    border: 2px solid var(--color3);
+    position: absolute;
+    top:225px;
+    left:320px
 }
-
 
 /* Footer */
 
