--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/handwriting");
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
 
 body {
   font-family: Noto Sans Mono, monospace;
@@ -117,6 +118,15 @@ a {
   flex-wrap: wrap;
 }
 
+.login {
+  color: rgb(11, 55, 136);
+  font-weight: bold;
+}
+
+.login:hover {
+  transform: scale(1.1);
+}
+
 .placeholder {
   border-radius: 6px;
   box-shadow: 2px 2px 2px black;
@@ -135,17 +145,12 @@ a {
 }
 
 #welcome {
-  background-image: url(https://i.giphy.com/media/FZzbTJyRTwPuw/giphy.webp);
-  background-size: cover;
-  color: transparent;
-  background-clip: text;
   -moz-background-clip: text; /* Firefox */
   -webkit-background-clip: text; /* Chrome, Safari */
-  font-size: 9vmin;
-  padding-top: 20vh;
-  padding-left: 8vh;
-  font-family: "Handwriting", sans-serif;
-  font-size: 5rem;
+  font-size: 12vmin;
+  padding-left: 8rem;
+  padding-top: 4rem;
+  font-family: "Pacifico";
 }
 
 .product-list {
@@ -265,7 +270,8 @@ text {
 
 .sidemenu i {
   font-size: 25px;
-  opacity: 0.5;
+  opacity: 0.8;
+  color: black;
 }
 
 .sidemenu i:hover {
@@ -326,12 +332,5 @@ text {
 
   .page-header__item_wide {
     display: none;
-  }
-
-  .button .login .placeholder {
-    display: block !important;
-    position: fixed;
-    top: 0;
-    left: 0;
   }
 }
