--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ li>a:hover{
 }
 .banner__content{
 	min-height: 100%;
-	background-image: url("banner.jpg");
+	background-image: url("images/banner.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: flex;
@@ -124,13 +124,13 @@ li>a:hover{
 	color: #E6E5A3;
 }
 .card1{
-    background-image: url("product1.jpg");
+    background-image: url("images/product1.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	grid-area: r;
 }
 .card2{
-	background-image: url("product2.jpg");
+	background-image: url("images/product2.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	grid-area: l;
