--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 /* vars */
 :root {
     --main-bg-color: hsl(261, 100%, 65%);
+    --nav-height: 10rem;
 }
 /* generic styling */
 html {
@@ -17,6 +18,7 @@ html {
 body {
     font-size: 1.6rem;
     min-height: 100vh;
+    margin-top: var(--nav-height);
 
     font-family: "Montserrat", sans-serif;
 }
@@ -67,9 +69,13 @@ h6 {
 /* navbar */
 nav {
     display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
     justify-content: space-around;
     align-items: center;
-    height: 10rem;
+    height: var(--nav-height);
     background-color: var(--main-bg-color);
 }
 
@@ -150,7 +156,12 @@ main {
 }
 .product-card-info h3 {
     margin-bottom: 0.5rem;
+    cursor: pointer;
 }
+.product-card-info h3:hover {
+    text-decoration: underline;
+}
+
 .product-card-price {
     display: flex;
     flex-wrap: wrap;
