--- a/style.css
+++ b/style.css
@@ -21,13 +21,47 @@ header {
     align-items: center;
     font-size:15px;
     background-color:#D7E9B9;
-    color: rgb(21, 20, 20);
     padding: 20px;
 }
 header a{
     text-decoration: none;
+    color: rgb(21, 20, 20);
 }
-main {
+.animation-image{
+    background-image: url("images/kid.jpg");
+    background-repeat:no-repeat;
+    background-position: center;
+    background-size: cover;
+    height:300px;
+    animation: slide 10s infinite;
+}
+@keyframes slide{
+    0%{
+        background-image: url("images/kid7.jpg");
+    }
+    25%{
+        background-image: url("images/kid1.jpg");
+    }
+    50%{
+        background-image: url("images/men1.jpg");
+    }
+    75%{
+        background-image: url("images/accessory1.jpg");
+    }
+    100%{
+        background-image: url("images/accessory2.jpg");
+    }
+}
+.image__text h1{
+    text-align: center;
+    color:rgb(21, 20, 20);
+    
+}
+h2{
+    text-align: center;
+    color:rgb(21, 20, 20);
+}
+.main {
    display: grid;
     grid-row: 1/3;
     grid-template-columns: repeat(3,1fr);
@@ -42,6 +76,7 @@ main {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,5);
   }
 .product {
+   /* flex: 1;*/
     margin: 10px;
     background-color: #fff;
     padding: 20px;
@@ -49,16 +84,18 @@ main {
 }
 .product img {
     max-width: 100%;
+   /* height:30%;*/
 }
-.product p {
-    margin: 10px 0;
+
+section h1{
+    text-align: center;
+    color:rgb(39, 3, 73);
 }
-.product button {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
+.animation{
+    width:800px;
+    height:400px;
+    background:url("images/image1.jpg");
+    margin:100px auto;
 }
 footer {
     display:flex;
@@ -82,7 +119,7 @@ footer {
         gap:1rem;
         padding :1rem;
     }
-    main {
+    .main {
          grid-template-columns: repeat(1,1fr);
          grid-gap: 1rem;
          flex-wrap: wrap;
