--- a/CSS/login.css
+++ b/CSS/login.css
@@ -20,14 +20,18 @@ body{
     margin: auto;
 }
 /* reset and commons ends here  */
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
 #container{
     display: flex;
     flex-direction: column;
     background-color: #fff;
     width: 80%;
-    align-items:stretch;
     margin-top: 10rem;
-    height: 40vh;
+    height: 45vh;
 
 }
 img{
